# tram8-plus

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: build.yml  lint.yml  release.yml
firmware/: Makefile
firmware/src/: gpio.c  gpio.h  hardware_config.h  main.c  max5825_control.h  midi_learn.c  midi_learn.h  midi_mapper.c  midi_mapper.h  midi_parser.c  midi_parser.h  sysex_handler.h  twi_control.h  ui.c  ui.h
firmware/tests/: Makefile  test_button.c  test_midi_parser.c  test_sysex.c
protocol/: tram8_sysex.h
tools/: firmware-packager.py
vst/: CMakeLists.txt
vst/cmake/: embed_html.cmake  platform.cmake  warnings.cmake
vst/resource/: ui.html
vst/source/: cids.h  controller.cpp  controller.h  entry.cpp  midi_engine.cpp  midi_engine.h  plugview.h  plugview.mm  processor.cpp  processor.h  ui.html  ui_html.h  version.h
vst/tests/: Makefile  test_midi_engine.cpp
